--- a/rememberme-api/build.gradle
+++ b/rememberme-api/build.gradle
@@ -2,7 +2,13 @@ bootJar { enabled = true }
 jar { enabled = false }
 
 dependencies {
+    implementation project(':rememberme-common')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // JPA
+    implementation 'org.springframework.boot:spring-boot-starter-security'	// Security
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'                // JWT
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'               // JWT
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'            // JWT
 
     runtimeOnly 'com.mysql:mysql-connector-j'                               // MySQL
 
