--- a/rememberme-api/src/main/resources/application.yml
+++ b/rememberme-api/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+        show_sql: true
     hibernate:
       ddl-auto: none
       naming:
@@ -15,3 +20,7 @@ spring:
       web:
         pageable:
           default-page-size: 10
+
+jwt:
+  secret-key: chanseokchanseokchanseokchanseokchanseok
+  expiration-time: 86400000
